Allow vector-config secret as well as configmap
Signed-off-by: MOZGIII <mike-n@narod.ru>

--- a/distribution/kubernetes/vector-namespaced.yaml
+++ b/distribution/kubernetes/vector-namespaced.yaml
@@ -91,3 +91,6 @@ spec:
               - configMap:
                   name: vector-config
                   optional: true
+              - secret:
+                  name: vector-config
+                  optional: true
