Rename vector.toml to managed.toml at vector-daemonset-managed-config ConfigMap
Signed-off-by: MOZGIII <mike-n@narod.ru>

--- a/distribution/kubernetes/vector-namespaced.yaml
+++ b/distribution/kubernetes/vector-namespaced.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: vector-daemonset-managed-config
 data:
-  vector.toml: |
+  managed.toml: |
     # Configuration for vector.
     # Docs: https://vector.dev/docs/
 
