--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,6 +159,8 @@ lru = "0.4.3"
 bloom = "0.3.2"
 pulsar = { version = "0.3.0", optional = true }
 task-compat = "0.1"
+kube = { version = "0.33", optional = true }
+k8s-openapi = { version = "0.7", features = ["v1_14"], optional = true }
 
 [target.'cfg(windows)'.dependencies]
 schannel = "0.1"
@@ -218,6 +220,10 @@ leveldb-plain = ["leveldb", "leveldb/leveldb-sys-2"]
 # This feature is more portable, but requires `cmake` as build dependency. Use it if `leveldb-plain` doesn't work.
 leveldb-cmake = ["leveldb", "leveldb/leveldb-sys-3"]
 
+# Enables kubernetes dependencies and shared code. Kubernetes-related sources,
+# transforms and sinks should depend on this feature.
+kubernetes = ["kube", "k8s-openapi"]
+
 # Sources
 sources = [
   "sources-docker",
@@ -236,6 +242,7 @@ sources = [
   "sources-syslog",
   "sources-tls",
   "sources-vector",
+  "sources-kubernetes-logs",
 ]
 sources-docker = ["shiplift"]
 sources-file = ["bytesize"]
@@ -253,6 +260,7 @@ sources-stdin = ["bytesize"]
 sources-syslog = ["sources-socket", "syslog_loose"]
 sources-tls = ["sources-http", "sources-logplex", "sources-socket", "sources-splunk_hec"]
 sources-vector = ["sources-socket"]
+sources-kubernetes-logs = ["kubernetes"]
 
 # Transforms
 transforms = [
@@ -402,6 +410,7 @@ kafka-integration-tests = ["sinks-kafka"]
 loki-integration-tests = ["sinks-loki"]
 pulsar-integration-tests = ["sinks-pulsar"]
 splunk-integration-tests = ["sinks-splunk_hec", "warp"]
+kubernetes-integration-tests = ["sources-kubernetes-logs"]
 
 disable-resolv-conf = []
 
